crates/md-cli/tests/snapshots/json_snapshots__inspect@wsh_multi_2of2.snap
---
source: crates/md-cli/tests/json_snapshots.rs
expression: body
---
{
  "descriptor": {
    "n": 2,
    "path_decl": {
      "data": "m",
      "tag": "Shared"
    },
    "tlv": {
      "fingerprints": null,
      "origin_path_overrides": null,
      "pubkeys": null,
      "unknown": [],
      "use_site_path_overrides": null
    },
    "tree": {
      "body": {
        "data": [
          {
            "body": {
              "data": {
                "indices": [
                  0,
                  1
                ],
                "k": 2
              },
              "kind": "MultiKeys"
            },
            "tag": "Multi"
          }
        ],
        "kind": "Children"
      },
      "tag": "Wsh"
    },
    "use_site_path": {
      "multipath": [
        {
          "hardened": false,
          "value": 0
        },
        {
          "hardened": false,
          "value": 1
        }
      ],
      "wildcard_hardened": false
    }
  },
  "md1_encoding_id": {
    "hex": "95c5f8f35650c65b5559c430de33e801"
  },
  "schema": "md-cli/2",
  "wallet_descriptor_template_id": {
    "hex": "a235ee7574702e45f80089c07e73ed22"
  },
  "wallet_policy_id": {
    "fingerprint": "0x16ba6a79",
    "hex": "16ba6a79d0a4ce757cf4186d618b640f"
  }
}
