crates/md-cli/tests/snapshots/json_snapshots__inspect@wsh_multi_2of3.snap
---
source: crates/md-cli/tests/json_snapshots.rs
expression: body
---
{
  "descriptor": {
    "n": 3,
    "path_decl": {
      "data": "m",
      "tag": "Shared"
    },
    "tlv": {
      "fingerprints": null,
      "origin_path_overrides": null,
      "pubkeys": null,
      "unknown": [],
      "use_site_path_overrides": null
    },
    "tree": {
      "body": {
        "data": [
          {
            "body": {
              "data": {
                "indices": [
                  0,
                  1,
                  2
                ],
                "k": 2
              },
              "kind": "MultiKeys"
            },
            "tag": "Multi"
          }
        ],
        "kind": "Children"
      },
      "tag": "Wsh"
    },
    "use_site_path": {
      "multipath": [
        {
          "hardened": false,
          "value": 0
        },
        {
          "hardened": false,
          "value": 1
        }
      ],
      "wildcard_hardened": false
    }
  },
  "md1_encoding_id": {
    "hex": "c20256f4148df3214111952e21550510"
  },
  "schema": "md-cli/2",
  "wallet_descriptor_template_id": {
    "hex": "9229657a33a2252ca8f0768227444002"
  },
  "wallet_policy_id": {
    "fingerprint": "0xee72a5a7",
    "hex": "ee72a5a7bbf174c6883d6c7645237a32"
  }
}
