crates/md-cli/tests/snapshots/json_snapshots__inspect@wsh_sortedmulti.snap
---
source: crates/md-cli/tests/json_snapshots.rs
expression: body
---
{
  "descriptor": {
    "n": 3,
    "path_decl": {
      "data": "m",
      "tag": "Shared"
    },
    "tlv": {
      "fingerprints": null,
      "origin_path_overrides": null,
      "pubkeys": null,
      "unknown": [],
      "use_site_path_overrides": null
    },
    "tree": {
      "body": {
        "data": [
          {
            "body": {
              "data": {
                "indices": [
                  0,
                  1,
                  2
                ],
                "k": 2
              },
              "kind": "MultiKeys"
            },
            "tag": "SortedMulti"
          }
        ],
        "kind": "Children"
      },
      "tag": "Wsh"
    },
    "use_site_path": {
      "multipath": [
        {
          "hardened": false,
          "value": 0
        },
        {
          "hardened": false,
          "value": 1
        }
      ],
      "wildcard_hardened": false
    }
  },
  "md1_encoding_id": {
    "hex": "7b859d0c14ec2c1005659821b6009d71"
  },
  "schema": "md-cli/2",
  "wallet_descriptor_template_id": {
    "hex": "b02b44037119e6b6fd1d82f61aa17e21"
  },
  "wallet_policy_id": {
    "fingerprint": "0xe78d105b",
    "hex": "e78d105b83c3eeb9e40f93767be2c706"
  }
}
